@@ -23,47 +23,146 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.when;
 
+import org.hyperledger.besu.ethereum.ProtocolContext;
 import org.hyperledger.besu.ethereum.chain.BadBlockManager;
+import org.hyperledger.besu.ethereum.chain.Blockchain;
 import org.hyperledger.besu.ethereum.core.Block;
 import org.hyperledger.besu.ethereum.core.BlockHeader;
+import org.hyperledger.besu.ethereum.core.BlockchainSetupUtil;
+import org.hyperledger.besu.ethereum.core.MiningConfiguration;
+import org.hyperledger.besu.ethereum.eth.EthProtocolConfiguration;
+import org.hyperledger.besu.ethereum.eth.manager.EthContext;
+import org.hyperledger.besu.ethereum.eth.manager.EthMessages;
 import org.hyperledger.besu.ethereum.eth.manager.EthPeer;
+import org.hyperledger.besu.ethereum.eth.manager.EthPeers;
+import org.hyperledger.besu.ethereum.eth.manager.EthProtocolManager;
+import org.hyperledger.besu.ethereum.eth.manager.EthProtocolManagerTestBuilder;
 import org.hyperledger.besu.ethereum.eth.manager.EthProtocolManagerTestUtil;
+import org.hyperledger.besu.ethereum.eth.manager.EthScheduler;
 import org.hyperledger.besu.ethereum.eth.manager.RespondingEthPeer;
-import org.hyperledger.besu.ethereum.eth.manager.ethtaskutils.RetryingMessageTaskTest;
 import org.hyperledger.besu.ethereum.eth.manager.exceptions.MaxRetriesReachedException;
+import org.hyperledger.besu.ethereum.eth.manager.peertask.PeerTaskExecutor;
 import org.hyperledger.besu.ethereum.eth.manager.peertask.PeerTaskExecutorResponseCode;
 import org.hyperledger.besu.ethereum.eth.manager.peertask.PeerTaskExecutorResult;
 import org.hyperledger.besu.ethereum.eth.manager.peertask.task.GetBodiesFromPeerTask;
 import org.hyperledger.besu.ethereum.eth.manager.peertask.task.GetHeadersFromPeerTask;
-import org.hyperledger.besu.ethereum.eth.manager.task.AbstractPeerTask.PeerTaskResult;
 import org.hyperledger.besu.ethereum.eth.manager.task.EthTask;
-import org.hyperledger.besu.ethereum.eth.messages.BlockHeadersMessage;
-import org.hyperledger.besu.ethereum.eth.messages.EthProtocolMessages;
-import org.hyperledger.besu.ethereum.eth.sync.SynchronizerConfiguration;
+import org.hyperledger.besu.ethereum.eth.sync.SyncMode;
 import org.hyperledger.besu.ethereum.eth.sync.ValidationPolicy;
+import org.hyperledger.besu.ethereum.eth.sync.state.SyncState;
 import org.hyperledger.besu.ethereum.eth.sync.tasks.exceptions.InvalidBlockException;
+import org.hyperledger.besu.ethereum.eth.transactions.BlobCache;
+import org.hyperledger.besu.ethereum.eth.transactions.TransactionPool;
+import org.hyperledger.besu.ethereum.eth.transactions.TransactionPoolConfiguration;
+import org.hyperledger.besu.ethereum.eth.transactions.TransactionPoolFactory;
+import org.hyperledger.besu.ethereum.forkid.ForkIdManager;
 import org.hyperledger.besu.ethereum.mainnet.BlockHeaderValidator;
 import org.hyperledger.besu.ethereum.mainnet.HeaderValidationMode;
 import org.hyperledger.besu.ethereum.mainnet.ProtocolSchedule;
 import org.hyperledger.besu.ethereum.mainnet.ProtocolSpec;
-import org.hyperledger.besu.ethereum.p2p.rlpx.wire.MessageData;
+import org.hyperledger.besu.metrics.noop.NoOpMetricsSystem;
+import org.hyperledger.besu.plugin.services.MetricsSystem;
+import org.hyperledger.besu.plugin.services.storage.DataStorageFormat;
+import org.hyperledger.besu.testutil.DeterministicEthScheduler;
+import org.hyperledger.besu.testutil.TestClock;
 
+import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
 
+import org.apache.tuweni.bytes.Bytes;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-public class DownloadHeaderSequenceTaskTest extends RetryingMessageTaskTest<List<BlockHeader>> {
+public class DownloadHeaderSequenceTaskTest {
 
   private final ValidationPolicy validationPolicy = () -> HeaderValidationMode.DETACHED_ONLY;
 
-  @Override
+  protected static Blockchain blockchain;
+  protected static ProtocolSchedule protocolSchedule;
+  protected static ProtocolContext protocolContext;
+  protected static MetricsSystem metricsSystem = new NoOpMetricsSystem();
+  protected EthProtocolManager ethProtocolManager;
+  protected EthContext ethContext;
+  protected EthPeers ethPeers;
+  protected TransactionPool transactionPool;
+  protected PeerTaskExecutor peerTaskExecutor;
+  protected AtomicBoolean peersDoTimeout;
+  protected AtomicInteger peerCountToTimeout;
+
+  @BeforeAll
+  public static void setup() {
+    final BlockchainSetupUtil blockchainSetupUtil =
+        BlockchainSetupUtil.forTesting(DataStorageFormat.FOREST);
+    blockchainSetupUtil.importAllBlocks();
+    blockchain = blockchainSetupUtil.getBlockchain();
+    protocolSchedule = blockchainSetupUtil.getProtocolSchedule();
+    protocolContext = blockchainSetupUtil.getProtocolContext();
+    assertThat(blockchainSetupUtil.getMaxBlockNumber()).isGreaterThanOrEqualTo(20L);
+  }
+
+  @BeforeEach
+  public void setupTest() {
+    protocolContext.getBadBlockManager().reset();
+    peersDoTimeout = new AtomicBoolean(false);
+    peerCountToTimeout = new AtomicInteger(0);
+    ethPeers =
+        spy(
+            new EthPeers(
+                () -> protocolSchedule.getByBlockHeader(blockchain.getChainHeadHeader()),
+                TestClock.fixed(),
+                metricsSystem,
+                EthProtocolConfiguration.DEFAULT_MAX_MESSAGE_SIZE,
+                Collections.emptyList(),
+                Bytes.random(64),
+                5,
+                5,
+                false,
+                SyncMode.FAST,
+                new ForkIdManager(blockchain, Collections.emptyList(), Collections.emptyList())));
+
+    final EthMessages ethMessages = new EthMessages();
+    final EthScheduler ethScheduler =
+        new DeterministicEthScheduler(
+            () -> peerCountToTimeout.getAndDecrement() > 0 || peersDoTimeout.get());
+    peerTaskExecutor = Mockito.mock(PeerTaskExecutor.class);
+    ethContext = new EthContext(ethPeers, ethMessages, ethScheduler, peerTaskExecutor);
+    final SyncState syncState = new SyncState(blockchain, ethContext.getEthPeers());
+    final EthProtocolConfiguration ethProtocolConfiguration = EthProtocolConfiguration.DEFAULT;
+    transactionPool =
+        TransactionPoolFactory.createTransactionPool(
+            protocolSchedule,
+            protocolContext,
+            ethContext,
+            TestClock.system(ZoneId.systemDefault()),
+            metricsSystem,
+            syncState,
+            TransactionPoolConfiguration.DEFAULT,
+            ethProtocolConfiguration,
+            new BlobCache(),
+            MiningConfiguration.newDefault());
+    transactionPool.setEnabled();
+
+    ethProtocolManager =
+        EthProtocolManagerTestBuilder.builder()
+            .setProtocolSchedule(protocolSchedule)
+            .setBlockchain(blockchain)
+            .setEthScheduler(ethScheduler)
+            .setTransactionPool(transactionPool)
+            .setEthereumWireProtocolConfiguration(ethProtocolConfiguration)
+            .setEthPeers(ethPeers)
+            .setEthMessages(ethMessages)
+            .setEthContext(ethContext)
+            .build();
+  }
+
   protected List<BlockHeader> generateDataToBeRequested() {
     final List<BlockHeader> requestedHeaders = new ArrayList<>();
     for (long i = 0; i < 3; i++) {
@@ -74,56 +173,21 @@ public class DownloadHeaderSequenceTaskTest extends RetryingMessageTaskTest<List
     return requestedHeaders;
   }
 
-  @Override
   protected EthTask<List<BlockHeader>> createTask(final List<BlockHeader> requestedData) {
-    final BlockHeader lastHeader = requestedData.get(requestedData.size() - 1);
+    final BlockHeader lastHeader = requestedData.getLast();
     final BlockHeader referenceHeader = blockchain.getBlockHeader(lastHeader.getNumber() + 1).get();
     return DownloadHeaderSequenceTask.endingAtHeader(
         protocolSchedule,
         protocolContext,
         ethContext,
-        SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(false).build(),
         referenceHeader,
         requestedData.size(),
-        maxRetries,
         validationPolicy,
         metricsSystem);
   }
 
   @Test
   public void failsWhenPeerReturnsOnlyReferenceHeader() {
-    final RespondingEthPeer respondingPeer =
-        EthProtocolManagerTestUtil.createPeer(ethProtocolManager);
-
-    // Execute task and wait for response
-    final BlockHeader referenceHeader = blockchain.getChainHeadHeader();
-    final EthTask<List<BlockHeader>> task =
-        DownloadHeaderSequenceTask.endingAtHeader(
-            protocolSchedule,
-            protocolContext,
-            ethContext,
-            SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(false).build(),
-            referenceHeader,
-            10,
-            maxRetries,
-            validationPolicy,
-            metricsSystem);
-    final CompletableFuture<List<BlockHeader>> future = task.run();
-
-    // Respond with only the reference header
-    final RespondingEthPeer.Responder responder =
-        (cap, peer, message) ->
-            Optional.of(BlockHeadersMessage.create(Collections.singletonList(referenceHeader)));
-    respondingPeer.respondWhile(responder, () -> !future.isDone());
-
-    assertThat(future.isDone()).isTrue();
-    assertThat(future.isCompletedExceptionally()).isTrue();
-    assertThatThrownBy(future::get).hasCauseInstanceOf(MaxRetriesReachedException.class);
-    assertNoBadBlocks();
-  }
-
-  @Test
-  public void failsWhenPeerReturnsOnlyReferenceHeaderUsingPeerTaskSystem() {
     RespondingEthPeer respondingEthPeer = EthProtocolManagerTestUtil.createPeer(ethProtocolManager);
 
     // Execute task and wait for response
@@ -139,10 +203,8 @@ public class DownloadHeaderSequenceTaskTest extends RetryingMessageTaskTest<List
             protocolSchedule,
             protocolContext,
             ethContext,
-            SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(true).build(),
             referenceHeader,
             10,
-            maxRetries,
             validationPolicy,
             metricsSystem);
     final CompletableFuture<List<BlockHeader>> future = task.run();
@@ -155,52 +217,6 @@ public class DownloadHeaderSequenceTaskTest extends RetryingMessageTaskTest<List
 
   @Test
   public void failsWhenPeerReturnsOnlySubsetOfHeaders() {
-    final RespondingEthPeer respondingPeer =
-        EthProtocolManagerTestUtil.createPeer(ethProtocolManager);
-
-    // Execute task and wait for response
-    final BlockHeader referenceHeader = blockchain.getChainHeadHeader();
-    final EthTask<List<BlockHeader>> task =
-        DownloadHeaderSequenceTask.endingAtHeader(
-            protocolSchedule,
-            protocolContext,
-            ethContext,
-            SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(false).build(),
-            referenceHeader,
-            10,
-            maxRetries,
-            validationPolicy,
-            metricsSystem);
-    final CompletableFuture<List<BlockHeader>> future = task.run();
-
-    // Filter response to include only reference header and previous header
-    final RespondingEthPeer.Responder fullResponder = getFullResponder();
-    final RespondingEthPeer.Responder responder =
-        (cap, peer, message) -> {
-          final Optional<MessageData> fullResponse = fullResponder.respond(cap, peer, message);
-          if (!fullResponse.isPresent()
-              || message.getCode() != EthProtocolMessages.GET_BLOCK_HEADERS) {
-            return fullResponse;
-          }
-          final BlockHeadersMessage headersMessage =
-              BlockHeadersMessage.readFrom(fullResponse.get());
-          // Filter for a subset of headers
-          final List<BlockHeader> headerSubset =
-              headersMessage.getHeaders(protocolSchedule).stream()
-                  .filter(h -> h.getNumber() >= referenceHeader.getNumber() - 1L)
-                  .collect(Collectors.toList());
-          return Optional.of(BlockHeadersMessage.create(headerSubset));
-        };
-    respondingPeer.respondTimes(responder, 100);
-
-    assertThat(future.isDone()).isTrue();
-    assertThat(future.isCompletedExceptionally()).isTrue();
-    assertThatThrownBy(future::get).hasCauseInstanceOf(MaxRetriesReachedException.class);
-    assertNoBadBlocks();
-  }
-
-  @Test
-  public void failsWhenPeerReturnsOnlySubsetOfHeadersUsingPeerTaskSystem() {
     final RespondingEthPeer respondingPeer =
         EthProtocolManagerTestUtil.createPeer(ethProtocolManager);
 
@@ -221,10 +237,8 @@ public class DownloadHeaderSequenceTaskTest extends RetryingMessageTaskTest<List
             protocolSchedule,
             protocolContext,
             ethContext,
-            SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(true).build(),
             referenceHeader,
             10,
-            maxRetries,
             validationPolicy,
             metricsSystem);
     final CompletableFuture<List<BlockHeader>> future = task.run();
@@ -246,44 +260,6 @@ public class DownloadHeaderSequenceTaskTest extends RetryingMessageTaskTest<List
     final Block badBlock = chain.get(2);
     ProtocolSchedule protocolScheduleSpy = setupHeaderValidationToFail(badBlock.getHeader());
 
-    // Execute the task
-    final BlockHeader referenceHeader = chain.get(blockCount - 1).getHeader();
-    final EthTask<List<BlockHeader>> task =
-        DownloadHeaderSequenceTask.endingAtHeader(
-            protocolScheduleSpy,
-            protocolContext,
-            ethContext,
-            SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(false).build(),
-            referenceHeader,
-            blockCount - 1, // The reference header is not included in this count
-            maxRetries,
-            validationPolicy,
-            metricsSystem);
-    final CompletableFuture<List<BlockHeader>> future = task.run();
-    final RespondingEthPeer.Responder fullResponder = getFullResponder();
-    respondingPeer.respondWhile(fullResponder, () -> !future.isDone());
-
-    // Check that the future completed exceptionally
-    assertThat(future.isCompletedExceptionally()).isTrue();
-    assertThatThrownBy(future::get)
-        .hasCauseInstanceOf(InvalidBlockException.class)
-        .hasMessageContaining("Header failed validation");
-
-    // Check bad blocks
-    assertBadBlock(badBlock);
-  }
-
-  @Test
-  public void marksBadBlockWhenHeaderValidationFailsUsingPeerTaskSystem() {
-    final RespondingEthPeer respondingPeer =
-        EthProtocolManagerTestUtil.createPeer(ethProtocolManager);
-    // Set up a chain with an invalid block
-    final int blockCount = 5;
-    final long startBlock = blockchain.getChainHeadBlockNumber() - blockCount;
-    final List<Block> chain = getBlockSequence(startBlock, blockCount);
-    final Block badBlock = chain.get(2);
-    ProtocolSchedule protocolScheduleSpy = setupHeaderValidationToFail(badBlock.getHeader());
-
     Mockito.when(peerTaskExecutor.execute(Mockito.any(GetHeadersFromPeerTask.class)))
         .then(
             (invocationOnMock) -> {
@@ -291,7 +267,7 @@ public class DownloadHeaderSequenceTaskTest extends RetryingMessageTaskTest<List
                   invocationOnMock.getArgument(0, GetHeadersFromPeerTask.class);
               List<BlockHeader> headers = new ArrayList<>();
               for (long i = task.getBlockNumber();
-                  i > task.getBlockNumber() - task.getMaxHeaders() * (task.getSkip() + 1);
+                  i > task.getBlockNumber() - (long) task.getMaxHeaders() * (task.getSkip() + 1);
                   i -= task.getSkip() + 1) {
                 Optional<BlockHeader> header = blockchain.getBlockHeader(i);
                 if (header.isPresent()) {
@@ -333,16 +309,14 @@ public class DownloadHeaderSequenceTaskTest extends RetryingMessageTaskTest<List
             protocolScheduleSpy,
             protocolContext,
             ethContext,
-            SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(true).build(),
             referenceHeader,
             blockCount - 1, // The reference header is not included in this count
-            maxRetries,
             validationPolicy,
             metricsSystem);
     final CompletableFuture<List<BlockHeader>> future = task.run();
 
-    final RespondingEthPeer.Responder fullResponder = getFullResponder();
-    respondingPeer.respondWhile(fullResponder, () -> !future.isDone());
+    //    final RespondingEthPeer.Responder fullResponder = getFullResponder();
+    //    respondingPeer.respondWhile(fullResponder, () -> !future.isDone());
 
     // Check that the future completed exceptionally
     assertThat(future.isCompletedExceptionally()).isTrue();
@@ -352,186 +326,6 @@ public class DownloadHeaderSequenceTaskTest extends RetryingMessageTaskTest<List
 
     // Check bad blocks
     assertBadBlock(badBlock);
-  }
-
-  @Test
-  public void processHeaders_markBadBlockWhenHeaderValidationFails() {
-    final RespondingEthPeer respondingPeer =
-        EthProtocolManagerTestUtil.createPeer(ethProtocolManager);
-    // Set up a chain with an invalid block
-    final int blockCount = 5;
-    final long startBlock = blockchain.getChainHeadBlockNumber() - blockCount;
-    final List<Block> chain = getBlockSequence(startBlock, blockCount);
-    final Block badBlock = chain.get(2);
-    ProtocolSchedule protocolScheduleSpy = setupHeaderValidationToFail(badBlock.getHeader());
-
-    // Execute the task
-    final BlockHeader referenceHeader = chain.get(blockCount - 1).getHeader();
-    final DownloadHeaderSequenceTask task =
-        DownloadHeaderSequenceTask.endingAtHeader(
-            protocolScheduleSpy,
-            protocolContext,
-            ethContext,
-            SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(false).build(),
-            referenceHeader,
-            blockCount - 1, // The reference header is not included in this count
-            maxRetries,
-            validationPolicy,
-            metricsSystem);
-
-    // Run
-    final List<BlockHeader> responseHeaders =
-        chain.stream()
-            .map(Block::getHeader)
-            .sorted(Comparator.comparing(BlockHeader::getNumber).reversed())
-            .toList();
-    PeerTaskResult<List<BlockHeader>> peerResponse =
-        new PeerTaskResult<>(respondingPeer.getEthPeer(), responseHeaders);
-    final CompletableFuture<List<BlockHeader>> future = task.processHeaders(peerResponse);
-    respondingPeer.respondWhile(this.getFullResponder(), () -> !future.isDone());
-
-    // Check that the future completed exceptionally
-    assertThat(future.isCompletedExceptionally()).isTrue();
-    assertThatThrownBy(future::get)
-        .hasCauseInstanceOf(InvalidBlockException.class)
-        .hasMessageContaining("Header failed validation");
-
-    // Check bad blocks
-    assertBadBlock(badBlock);
-  }
-
-  @Test
-  public void processHeaders_markBadBlockHashWhenHeaderValidationFailsAndBodyUnavailable() {
-    final RespondingEthPeer respondingPeer =
-        EthProtocolManagerTestUtil.createPeer(ethProtocolManager);
-    // Set up a chain with an invalid block
-    final int blockCount = 5;
-    final long startBlock = blockchain.getChainHeadBlockNumber() - blockCount;
-    final List<Block> chain = getBlockSequence(startBlock, blockCount);
-    final Block badBlock = chain.get(2);
-    ProtocolSchedule protocolScheduleSpy = setupHeaderValidationToFail(badBlock.getHeader());
-
-    // Set up the task
-    final BlockHeader referenceHeader = chain.get(blockCount - 1).getHeader();
-    final DownloadHeaderSequenceTask task =
-        DownloadHeaderSequenceTask.endingAtHeader(
-            protocolScheduleSpy,
-            protocolContext,
-            ethContext,
-            SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(false).build(),
-            referenceHeader,
-            blockCount - 1, // The reference header is not included in this count
-            maxRetries,
-            validationPolicy,
-            metricsSystem);
-
-    // Run
-    final List<BlockHeader> responseHeaders =
-        chain.stream()
-            .map(Block::getHeader)
-            .sorted(Comparator.comparing(BlockHeader::getNumber).reversed())
-            .toList();
-    PeerTaskResult<List<BlockHeader>> peerResponse =
-        new PeerTaskResult<>(respondingPeer.getEthPeer(), responseHeaders);
-    final CompletableFuture<List<BlockHeader>> future = task.processHeaders(peerResponse);
-    // Use empty responder so block body cannot be retrieved
-    respondingPeer.respondWhile(RespondingEthPeer.emptyResponder(), () -> !future.isDone());
-
-    // Check that the future completed exceptionally
-    assertThat(future.isCompletedExceptionally()).isTrue();
-    assertThatThrownBy(future::get)
-        .hasCauseInstanceOf(InvalidBlockException.class)
-        .hasMessageContaining("Header failed validation");
-
-    // Check bad blocks
-    assertBadHeader(badBlock.getHeader());
-  }
-
-  @Test
-  public void processHeaders_doesNotMarkBadBlockForOutOfRangeResponse() {
-    final RespondingEthPeer respondingPeer =
-        EthProtocolManagerTestUtil.createPeer(ethProtocolManager);
-
-    // Set up the task
-    final int blockCount = 3;
-    final long startBlock = blockchain.getChainHeadBlockNumber() - blockCount;
-    final List<Block> chain = getBlockSequence(startBlock, blockCount);
-    final int segmentLength = blockCount - 1; // The reference header is not included in this count
-    final BlockHeader referenceHeader = chain.get(blockCount - 1).getHeader();
-    final DownloadHeaderSequenceTask task =
-        DownloadHeaderSequenceTask.endingAtHeader(
-            protocolSchedule,
-            protocolContext,
-            ethContext,
-            SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(false).build(),
-            referenceHeader,
-            segmentLength,
-            maxRetries,
-            validationPolicy,
-            metricsSystem);
-
-    // Run
-    final Block outOfRangeBlock = blockchain.getBlockByNumber(startBlock - 1).get();
-    final List<BlockHeader> headerResponse =
-        chain.stream()
-            .map(Block::getHeader)
-            .sorted(Comparator.comparing(BlockHeader::getNumber).reversed())
-            .collect(Collectors.toCollection(ArrayList::new));
-    headerResponse.add(outOfRangeBlock.getHeader());
-
-    PeerTaskResult<List<BlockHeader>> peerResponse =
-        new PeerTaskResult<>(respondingPeer.getEthPeer(), headerResponse);
-    final CompletableFuture<List<BlockHeader>> future = task.processHeaders(peerResponse);
-
-    // Check that the future completed exceptionally
-    assertThat(future.isCompletedExceptionally()).isTrue();
-    assertThatThrownBy(future::get)
-        .hasCauseInstanceOf(InvalidBlockException.class)
-        .hasMessageNotContaining("Header failed validation")
-        .hasMessageContaining("Out-of-range");
-
-    // Check bad blocks
-    assertNoBadBlocks();
-  }
-
-  @Test
-  public void processHeaders_doesNotMarkBadBlockForMisorderedBlocks() {
-    final RespondingEthPeer respondingPeer =
-        EthProtocolManagerTestUtil.createPeer(ethProtocolManager);
-
-    // Set up the task
-    final int blockCount = 5;
-    final long startBlock = blockchain.getChainHeadBlockNumber() - blockCount;
-    final List<Block> chain = getBlockSequence(startBlock, blockCount);
-    final int segmentLength = blockCount - 1; // The reference header is not included in this count
-    final BlockHeader referenceHeader = blockchain.getChainHeadHeader();
-    final DownloadHeaderSequenceTask task =
-        DownloadHeaderSequenceTask.endingAtHeader(
-            protocolSchedule,
-            protocolContext,
-            ethContext,
-            SynchronizerConfiguration.builder().isPeerTaskSystemEnabled(false).build(),
-            referenceHeader,
-            segmentLength,
-            maxRetries,
-            validationPolicy,
-            metricsSystem);
-
-    // Return blocks in ascending order
-    final List<BlockHeader> responseHeaders = chain.stream().map(Block::getHeader).toList();
-    PeerTaskResult<List<BlockHeader>> peerResponse =
-        new PeerTaskResult<>(respondingPeer.getEthPeer(), responseHeaders);
-    final CompletableFuture<List<BlockHeader>> future = task.processHeaders(peerResponse);
-
-    // Check that the future completed exceptionally
-    assertThat(future.isCompletedExceptionally()).isTrue();
-    assertThatThrownBy(future::get)
-        .hasCauseInstanceOf(InvalidBlockException.class)
-        .hasMessageNotContaining("Header failed validation")
-        .hasMessageContaining("misordered blocks");
-
-    // Check bad blocks
-    assertNoBadBlocks();
   }
 
   private List<Block> getBlockSequence(final long firstBlockNumber, final int blockCount) {
@@ -571,9 +365,9 @@ public class DownloadHeaderSequenceTaskTest extends RetryingMessageTaskTest<List
     assertThat(badBlockManager.getBadHeaders()).isEmpty();
   }
 
-  private void assertBadHeader(final BlockHeader badHeader) {
+  protected void assertNoBadBlocks() {
     BadBlockManager badBlockManager = protocolContext.getBadBlockManager();
-    assertThat(badBlockManager.getBadHeaders()).containsExactly(badHeader);
-    assertThat(badBlockManager.getBadBlocks()).isEmpty();
+    assertThat(badBlockManager.getBadBlocks().size()).isEqualTo(0);
+    assertThat(badBlockManager.getBadHeaders().size()).isEqualTo(0);
   }
 }
